added more sort files and further testing for those classes