@@ -11,7 +11,7 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
-class AuthorPostSorterTest {
+class DatePostSorterTest {
     UserPost userPost1 = new UserPost("Joe Bloggs",
             OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
             "Hello World!", 2);
@@ -26,7 +26,7 @@ class AuthorPostSorterTest {
 
     @Test
     void sort_null_null() {
-        List<UserPost> actual = new AuthorPostSorter().sort(null, SortOrder.ASC);
+        List<UserPost> actual = new DatePostSorter().sort(null, SortOrder.ASC);
 
         assertNull(actual);
     }
@@ -36,27 +36,27 @@ class AuthorPostSorterTest {
         List<UserPost> inputList = Collections.emptyList();
         List<UserPost> expected = Collections.emptyList();
 
-        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
+        List<UserPost> actual = new DatePostSorter().sort(inputList, SortOrder.ASC);
 
         assertEquals(expected, actual);
     }
 
     @Test
     void sort_1ItemList_1ItemList() {
-        List<UserPost> inputList = Arrays.asList(userPost1);
-        List<UserPost> expected = Arrays.asList(userPost1);
+        List<UserPost> inputList = List.of(userPost1);
+        List<UserPost> expected = List.of(userPost1);
 
-        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
+        List<UserPost> actual = new DatePostSorter().sort(inputList, SortOrder.ASC);
 
         assertEquals(expected, actual);
     }
 
     @Test
     void sort_unsorted3Items_sorted3Items() {
-        List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = Arrays.asList(userPost3, userPost1, userPost2);
+        List<UserPost> inputList = Arrays.asList(userPost1, userPost3, userPost2);
+        List<UserPost> expected = Arrays.asList(userPost1, userPost2, userPost3);
 
-        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
+        List<UserPost> actual = new DatePostSorter().sort(inputList, SortOrder.ASC);
 
         assertEquals(expected, actual);
     }
@@ -76,9 +76,9 @@ class AuthorPostSorterTest {
                 "An example of a post \nwith lines breaks.", 3);
 
         List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = Arrays.asList(userPost3, userPost1, userPost2);
+        List<UserPost> expected = Arrays.asList(userPost1, userPost2, userPost3);
 
-        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
+        List<UserPost> actual = new DatePostSorter().sort(inputList, SortOrder.ASC);
 
         assertEquals(expected, actual);
     }
@@ -86,31 +86,53 @@ class AuthorPostSorterTest {
     @Test
     void sort_unsorted3ItemsDESC_sorted3ItemsDESC() {
         List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = Arrays.asList(userPost1, userPost2, userPost3);
+        List<UserPost> expected = Arrays.asList(userPost3, userPost2, userPost1);
 
-        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.DESC);
+        List<UserPost> actual = new DatePostSorter().sort(inputList, SortOrder.DESC);
 
         assertEquals(expected, actual);
     }
 
     @Test
-    void sort_unsorted2Num_sorted2Num() {
-        UserPost userPost1 = new UserPost("2",
+    void sort_withSameDate_sortedSameDate() {
+        UserPost userPost1 = new UserPost("joe bloggs",
                 OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
                 "Hello World!", 2);
 
-        UserPost userPost2 = new UserPost("3",
-                OffsetDateTime.of(2020, 1, 3, 8, 53, 34, 0, ZoneOffset.UTC),
+        UserPost userPost2 = new UserPost("joe bloggs",
+                OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
                 "Another example post.", 1);
 
-        UserPost userPost3 = new UserPost("1",
+        UserPost userPost3 = new UserPost("jane smith",
+                OffsetDateTime.of(2020, 3, 12, 13, 22, 12, 0, ZoneOffset.UTC),
+                "An example of a post \nwith lines breaks.", 3);
+
+        List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
+        List<UserPost> expected = Arrays.asList(userPost1, userPost2, userPost3);
+
+        List<UserPost> actual = new DatePostSorter().sort(inputList, SortOrder.ASC);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void sort_withSameDateDesc_sortedSameDateDesc() {
+        UserPost userPost1 = new UserPost("joe bloggs",
+                OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
+                "Hello World!", 2);
+
+        UserPost userPost2 = new UserPost("joe bloggs",
+                OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
+                "Another example post.", 1);
+
+        UserPost userPost3 = new UserPost("jane smith",
                 OffsetDateTime.of(2020, 3, 12, 13, 22, 12, 0, ZoneOffset.UTC),
                 "An example of a post \nwith lines breaks.", 3);
 
         List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
         List<UserPost> expected = Arrays.asList(userPost3, userPost1, userPost2);
 
-        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
+        List<UserPost> actual = new DatePostSorter().sort(inputList, SortOrder.DESC);
 
         assertEquals(expected, actual);
     }
